# python-monorepo

./: .flake8  README.md  pyproject.toml
.github/workflows/: project-a.yml  train.yml
projects/project-a/: Dockerfile  Makefile  pyproject.toml  run.py
projects/project-a/.devcontainer/: Dockerfile  Dockerfile.bk  devcontainer.json
projects/project-a/src/: pipeline.py
projects/project-a/tests/: test_pipeline.py
scripts/: merge_pyproject.py
shared/pkg1/: pyproject.toml
shared/pkg1/pkg1/: base_pipeline.py
shared/pkg2/: pyproject.toml
shared/pkg2/pkg2/: calc.py
