[tool.poetry]
name = "poetry-monorepo"
version = "0.1.0"
description = ""
authors = ["masashi_takanobu <mtakanobu2@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_monorepo"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
