[tool.poetry]
name = "poetry-monorepo"
version = "0.1.0"
description = ""
authors = ["masashi_takanobu <mtakanobu2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.2"
black = "^23.3.0"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.mypy]
disallow_untyped_defs = true
show_error_context = true
warn_return_any = true

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
