[tool.poetry]
name = "project-a"
version = "0.1.0"
description = ""
authors = ["masashi_takanobu <mtakanobu2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
scikit-learn = "^1.3.0"
pkg1 = {path = "../../shared/pkg1/"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
